# Flamingo

./: .TODO  .gitignore  Flamingo.pro  README.md  answer.cpp  answer.h  course.cpp  course.h  courseparserexception.cpp  courseparserexception.h  coursesparser.cpp  coursesparser.h  gallery.html  htmlanswer.cpp  htmlpage.h  index.html  lesson.cpp  lesson.h  lessonsparser.cpp  lessonsparser.h  main.cpp  mainwindow.h  mainwindow.ui  module.cpp  module.h  moduleitem.cpp  moduleitem.h  modulesparser.cpp  modulesparser.h  page.cpp  page.h  parseerrorexception.h  parser.cpp  parser.h  question.cpp  question.h  rightanswers.h  submodule.cpp  submodule.h  textanswer.cpp  (+3 more)
src/: CMakeLists.txt  COPYING  QtLicenseUpdater  answer.h  flamingoapplication.cpp  flamingoapplication.h  flamingosplashscreen.cpp  flamingosplashscreen.h  helper.cpp  helper.h  htmlanswer.h  lesson.h  license_template  main.cpp  mainwidget.cpp  mainwindow.cpp  mainwindow.h  module.h  nullable.hpp  page.cpp  page.h  rightanswers.cpp  submodule.h  textpage.cpp  textpage.h
src/db/: databasemanager.cpp  databasemanager.h  usermanager.cpp  usermanager.h
src/exceptions/: answercreatingerror.cpp  answercreatingerror.h  createsqltableerror.cpp  createsqltableerror.h  databaseinitializationerror.cpp  databaseinitializationerror.h  exception.cpp  exception.h  include.h  modelerror.cpp  modelerror.h  modelsavingerror.cpp  modelsavingerror.h  modelserializationerror.cpp  modelserializationerror.h  modelsqlerror.cpp  modelsqlerror.h  pagecreatingerror.cpp  pagecreatingerror.h
src/models/: course.cpp  course.h  include.h  (+14 more)
(+282 files in other folders)
